crop/discussion/testrunner/16853/16853_rev1_discussion.txt
DESCRIPTION

MB-100 Fix broken test

Before this change:

$ ./testrunner -i b/resources/dev-4-nodes.ini -c conf/py-viewquery.conf
filename:conf/py-viewquery.conf
prefix: viewquerytests.ViewQueryTests
[Global Test input params]
{'cluster_name': 'dev-4-nodes', 'spec': 'py-viewquery', 'conf_file': 'conf/py-viewquery.conf', 'num_nodes': 4}

  ./testrunner -i b/resources/dev-4-nodes.ini  -t viewquerytests.ViewQueryTests.test_simple_dataset_stale_queries
[Test Input params] : {'cluster_name': 'dev-4-nodes', 'spec': 'py-viewquery', 'conf_file': 'conf/py-viewquery.conf', 'num_nodes': 4}
Traceback (most recent call last):
  File "./testrunner", line 257, in <module>
    suite = unittest.TestLoader().loadTestsFromName(name)
  File "/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/unittest/loader.py", line 91, in loadTestsFromName
    module = __import__('.'.join(parts_copy))
  File "pytests/viewquerytests.py", line 10, in <module>
    from membase.api.rest_client import RestConnection, RestHelper
  File "lib/membase/api/rest_client.py", line 1196
    def reset_auto_compaction(self, parallelDBAndVC = "false", dbFragmentThreshold = 80,
      ^
IndentationError: expected an indented block

Change-Id: Iccdd145ea9d45042cb3b88cb3675f4fca6d979cb


COMMENTS

author: Hugo Blankenship
date: 2012-06-06 07:28:32.671000000

Patch Set 1:

Build Started http://qa.hq.northscale.net/job/testrunner-Jasmin Rangel-master/658/ 

-------------------------------------
author: Hugo Blankenship
date: 2012-06-06 07:43:02.222000000

Patch Set 1: Verified

Build Successful 

http://qa.hq.northscale.net/job/testrunner-Jasmin Rangel-master/658/ : SUCCESS

-------------------------------------
author: Reid Stokes
date: 2012-06-06 07:56:47.880000000

Patch Set 1: Do not submit

Just fixed it.

-------------------------------------
author: Titus Ho
date: 2012-06-07 21:34:42.501000000

Patch Set 1:

should this abandoned?

-------------------------------------
author: Porter Oconnor
date: 2012-06-07 21:36:03.763000000

Patch Set 1: Abandoned

Yeah, Karan didn't like my change... :/

-------------------------------------
author: Reid Stokes
date: 2012-06-07 21:38:12.157000000

Patch Set 1:

;)

-------------------------------------
